<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mg400_bringup</name>
  <version>1.3.2</version>
  <description>Dobot MG400 launch file package.</description>
  <maintainer email="m12watanabe1a@gmail.com">m12watanabe1a</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>h6x_bringup_common</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>mg400_description</exec_depend>
  <exec_depend>mg400_joy</exec_depend>
  <exec_depend>mg400_node</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>